# algorithmify

./: Cargo.toml  LICENSE  README.md
algorithmify/: Cargo.toml
algorithmify/src/: expressions.rs  interpreter.rs  lib.rs
algorithmify/src/expressions/: block.rs  conditions.rs  float.rs  functions.rs  integer.rs  loops.rs  method_call.rs  operation.rs  reference.rs  statements.rs
algorithmify/src/interpreter/: context.rs
algorithmify/tests/: main.rs
algorithmify/tests/algorithms/: insertion_sort.rs  mod.rs
algorithmify/tests/expressions/: block_tests.rs  condition_tests.rs  expression_test.rs  loop_tests.rs  main.rs  operations_test.rs  operations_tests.rs
algorithmify_macros/: Cargo.toml
algorithmify_macros/src/: condition_mapper.rs  expression_mapper.rs  function_mapper.rs  lib.rs  loop_mapper.rs  statement_mapper.rs  token_container.rs  token_iterator.rs
