[package]
name = "algorithmify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fero23/algorithmify/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
algorithmify_macros = { path = "../algorithmify_macros", version = "0.1.0" }
